Changes in Rvmmin

Changes before 2012-4-30 not recorded 

TODOS
   o    Saving of final Hessian approx as in Rvmminx

   o    Eventual incorporation of line searches, possibly in a
        separate routine

2012-5-21
   o	Separation of constrained and unconstrained versions.
