@@ -1,6 +1,5 @@
 export(
   "Rvmmin",
   "Rvmminb",
-  "Rvmminu",
-  "optansout"
+  "Rvmminu"
 )
